--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -9,7 +9,7 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=2
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=0
-dock_filesystem_selected_paths=PackedStringArray("res://res/textures/ps1_post_processing.gdshader")
+dock_filesystem_selected_paths=PackedStringArray("res://res/textures/enviorment/floor/")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://src/", "res://res/", "res://res/textures/", "res://res/textures/enviorment/", "res://res/scenes/")
 dock_node_current_tab=0
 dock_history_include_scene=true
@@ -32,20 +32,20 @@ open_scenes=PackedStringArray("res://res/scenes/levels/world.tscn", "res://res/s
 current_scene="res://res/scenes/levels/test_map.tscn"
 center_split_offset=-554
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=1
-selected_bottom_panel_item=1
+selected_main_editor_idx=2
+selected_bottom_panel_item=16
 
 [EditorWindow]
 
 screen=0
-mode="maximized"
-position=Vector2i(0, 23)
+mode="fullscreen"
+position=Vector2i(0, 0)
 size=Vector2i(1780, 1018)
 
 [ScriptEditor]
 
-open_scripts=["res://src/player/player.gd", "res://README.md"]
-selected_script="res://src/player/player.gd"
+open_scripts=["res://README.md"]
+selected_script="res://README.md"
 open_help=[]
 script_split_offset=400
 list_split_offset=0
@@ -58,7 +58,7 @@ floating_window_screen=0
 
 [ShaderEditor]
 
-open_shaders=["res://res/textures/enviorment/walls/computer_wall.tres::Shader_nmdfg", "res://res/textures/ps1_post_processing.gdshader"]
+open_shaders=["res://res/textures/ps1_post_processing.gdshader"]
 split_offset=400
 selected_shader="res://res/textures/ps1_post_processing.gdshader"
 text_shader_zoom_factor=1.0
