--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -9,7 +9,7 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=2
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=0
-dock_filesystem_selected_paths=PackedStringArray("res://res/textures/enviorment/floor/")
+dock_filesystem_selected_paths=PackedStringArray("res://src/weapons/rifle.tres")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://src/", "res://res/", "res://res/textures/", "res://res/textures/enviorment/", "res://res/scenes/")
 dock_node_current_tab=0
 dock_history_include_scene=true
@@ -28,24 +28,24 @@ dock_4="FileSystem"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://res/scenes/levels/world.tscn", "res://res/scenes/levels/test_map.tscn", "res://res/scenes/prefabs/player.tscn")
-current_scene="res://res/scenes/levels/test_map.tscn"
+open_scenes=PackedStringArray("res://res/scenes/levels/world.tscn", "res://res/scenes/levels/test_map.tscn", "res://res/scenes/prefabs/player.tscn", "res://weapon_holder.tscn")
+current_scene="res://weapon_holder.tscn"
 center_split_offset=-554
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
-selected_bottom_panel_item=16
+selected_bottom_panel_item=1
 
 [EditorWindow]
 
 screen=0
-mode="fullscreen"
-position=Vector2i(0, 0)
+mode="maximized"
+position=Vector2i(0, 50)
 size=Vector2i(1780, 1018)
 
 [ScriptEditor]
 
-open_scripts=["res://README.md"]
-selected_script="res://README.md"
+open_scripts=["res://README.md", "res://src/player/weapon_holder.gd"]
+selected_script="res://src/player/weapon_holder.gd"
 open_help=[]
 script_split_offset=400
 list_split_offset=0
