--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -10,7 +10,7 @@ dock_filesystem_display_mode=2
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=0
 dock_filesystem_selected_paths=PackedStringArray("res://src/weapons/rifle.tres")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://src/", "res://res/", "res://res/textures/", "res://res/textures/enviorment/", "res://res/scenes/")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://src/", "res://res/", "res://res/textures/", "res://res/textures/enviorment/", "res://res/scenes/", "res://res/scenes/prefabs/")
 dock_node_current_tab=0
 dock_history_include_scene=true
 dock_history_include_global=true
@@ -28,18 +28,18 @@ dock_4="FileSystem"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://res/scenes/levels/world.tscn", "res://res/scenes/levels/test_map.tscn", "res://res/scenes/prefabs/player.tscn", "res://weapon_holder.tscn")
-current_scene="res://weapon_holder.tscn"
+open_scenes=PackedStringArray("res://res/scenes/levels/world.tscn", "res://res/scenes/levels/test_map.tscn", "res://res/scenes/prefabs/player/player.tscn", "res://res/scenes/prefabs/player/weapon_holder.tscn")
+current_scene="res://res/scenes/prefabs/player/weapon_holder.tscn"
 center_split_offset=-554
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=2
-selected_bottom_panel_item=1
+selected_main_editor_idx=1
+selected_bottom_panel_item=2
 
 [EditorWindow]
 
 screen=0
 mode="maximized"
-position=Vector2i(0, 50)
+position=Vector2i(0, 23)
 size=Vector2i(1780, 1018)
 
 [ScriptEditor]
