Commit for state

--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -1,1 +1,33 @@
-list=[]
+list=[{
+"base": &"CharacterBody3D",
+"class": &"BasicEnemy",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://res/scenes/prefabs/BasicEnemy.gd"
+}, {
+"base": &"State",
+"class": &"EnemyFollow",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://res/scenes/prefabs/enemyFollow.gd"
+}, {
+"base": &"State",
+"class": &"EnemyIdle",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://res/scenes/prefabs/enemyIdle.gd"
+}, {
+"base": &"Node",
+"class": &"State",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://res/scenes/prefabs/state.gd"
+}]
