--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -9,7 +9,7 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=2
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=0
-dock_filesystem_selected_paths=PackedStringArray("res://res/textures/ps1_post_processing.gdshader")
+dock_filesystem_selected_paths=PackedStringArray("res://res/scenes/prefabs/enemyIdle.gd")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://src/", "res://res/", "res://res/textures/", "res://res/textures/enviorment/", "res://res/scenes/")
 dock_node_current_tab=0
 dock_history_include_scene=true
@@ -28,24 +28,24 @@ dock_4="FileSystem"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://res/scenes/levels/world.tscn", "res://res/scenes/levels/test_map.tscn", "res://res/scenes/prefabs/player.tscn")
-current_scene="res://res/scenes/levels/test_map.tscn"
+open_scenes=PackedStringArray("res://res/scenes/levels/test_map.tscn", "res://res/scenes/prefabs/player.tscn", "res://res/scenes/levels/world.tscn")
+current_scene="res://res/scenes/prefabs/player.tscn"
 center_split_offset=-554
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=1
+selected_main_editor_idx=2
 selected_bottom_panel_item=1
 
 [EditorWindow]
 
 screen=0
-mode="maximized"
-position=Vector2i(0, 23)
-size=Vector2i(1780, 1018)
+mode="windowed"
+position=Vector2i(-235, 322)
+size=Vector2i(1920, 1011)
 
 [ScriptEditor]
 
-open_scripts=["res://src/player/player.gd", "res://README.md"]
-selected_script="res://src/player/player.gd"
+open_scripts=["res://res/scenes/prefabs/BasicEnemy.gd", "res://res/scenes/prefabs/enemyFollow.gd", "res://res/scenes/prefabs/enemyIdle.gd", "res://src/player/player.gd", "res://README.md", "res://res/scenes/prefabs/state.gd", "res://res/scenes/prefabs/state_machine.gd"]
+selected_script="res://res/scenes/prefabs/state_machine.gd"
 open_help=[]
 script_split_offset=400
 list_split_offset=0
@@ -58,7 +58,17 @@ floating_window_screen=0
 
 [ShaderEditor]
 
-open_shaders=["res://res/textures/enviorment/walls/computer_wall.tres::Shader_nmdfg", "res://res/textures/ps1_post_processing.gdshader"]
+open_shaders=["res://res/textures/ps1_post_processing.gdshader"]
 split_offset=400
 selected_shader="res://res/textures/ps1_post_processing.gdshader"
 text_shader_zoom_factor=1.0
+
+[editor_log]
+
+log_filter_0=true
+log_filter_2=true
+log_filter_1=false
+log_filter_3=false
+log_filter_4=true
+collapse=false
+show_search=true
