--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -6,4 +6,12 @@ list=[{
 "is_tool": false,
 "language": &"GDScript",
 "path": "res://src/weapons/weapon.gd"
+}, {
+"base": &"RefCounted",
+"class": &"WeaponClass",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://src/weapon/weapon_class.gd"
 }]
