--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -4,21 +4,21 @@ dock_3_selected_tab_idx=0
 dock_4_selected_tab_idx=0
 dock_5_selected_tab_idx=0
 dock_floating={}
-dock_filesystem_h_split_offset=480
+dock_filesystem_h_split_offset=240
 dock_filesystem_v_split_offset=0
-dock_filesystem_display_mode=2
+dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
-dock_filesystem_file_list_display_mode=0
-<<<<<<< HEAD
-dock_filesystem_selected_paths=PackedStringArray("res://res/textures/ps1_post_processing.gdshader")
-=======
-dock_filesystem_selected_paths=PackedStringArray("res://res/scenes/prefabs/enemyIdle.gd")
->>>>>>> LuisGandora-main
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://src/", "res://res/", "res://res/textures/", "res://res/textures/enviorment/", "res://res/scenes/")
+dock_filesystem_file_list_display_mode=1
+<<<<<<<HEADdock_filesystem_selected_paths=PackedStringArray("res://res/textures/ps1_post_processing.gdshader")
+dock_3="Scene,Import"
+dock_4="FileSystem"
+dock_5="Inspector,Node,History"
+dock_filesystem_selected_paths=PackedStringArray("res://")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://")
 dock_node_current_tab=0
 dock_history_include_scene=true
 dock_history_include_global=true
-dock_bottom=["FileSystem"]
+dock_bottom=[]
 dock_closed=[]
 dock_split_2=0
 dock_split_3=0
@@ -26,66 +26,38 @@ dock_hsplit_1=0
 dock_hsplit_2=270
 dock_hsplit_3=-270
 dock_hsplit_4=0
-dock_3="Scene,Import"
-dock_5="Inspector,Node,History"
-dock_4="FileSystem"
 
 [EditorNode]
 
-<<<<<<< HEAD
-open_scenes=PackedStringArray("res://res/scenes/levels/world.tscn", "res://res/scenes/levels/test_map.tscn", "res://res/scenes/prefabs/player.tscn")
-current_scene="res://res/scenes/levels/test_map.tscn"
-center_split_offset=-554
+open_scenes=PackedStringArray()
+current_scene=""
+center_split_offset=0
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=1
-=======
-open_scenes=PackedStringArray("res://res/scenes/levels/test_map.tscn", "res://res/scenes/prefabs/player.tscn", "res://res/scenes/levels/world.tscn")
-current_scene="res://res/scenes/prefabs/player.tscn"
-center_split_offset=-554
-selected_default_debugger_tab_idx=0
-selected_main_editor_idx=2
->>>>>>> LuisGandora-main
-selected_bottom_panel_item=1
 
 [EditorWindow]
 
 screen=0
-mode="windowed"
-position=Vector2i(-235, 322)
-size=Vector2i(1920, 1011)
+mode="maximized"
+position=Vector2i(0, 34)
 
 [ScriptEditor]
 
-<<<<<<< HEAD
-open_scripts=["res://src/player/player.gd", "res://README.md"]
-selected_script="res://src/player/player.gd"
-=======
-open_scripts=["res://res/scenes/prefabs/BasicEnemy.gd", "res://res/scenes/prefabs/enemyFollow.gd", "res://res/scenes/prefabs/enemyIdle.gd", "res://src/player/player.gd", "res://README.md", "res://res/scenes/prefabs/state.gd", "res://res/scenes/prefabs/state_machine.gd"]
-selected_script="res://res/scenes/prefabs/state_machine.gd"
->>>>>>> LuisGandora-main
+open_scripts=[]
+selected_script=""
 open_help=[]
-script_split_offset=400
+script_split_offset=200
 list_split_offset=0
 zoom_factor=1.0
 
 [GameView]
 
-floating_window_rect=Rect2i(0, 23, 2560, 1369)
-floating_window_screen=0
+floating_window_rect=Rect2i(0, 0, 0, 0)
+floating_window_screen=-1
 
 [ShaderEditor]
 
-open_shaders=["res://res/textures/ps1_post_processing.gdshader"]
-split_offset=400
-selected_shader="res://res/textures/ps1_post_processing.gdshader"
+open_shaders=[]
+split_offset=200
+selected_shader=""
 text_shader_zoom_factor=1.0
-
-[editor_log]
-
-log_filter_0=true
-log_filter_2=true
-log_filter_1=false
-log_filter_3=false
-log_filter_4=true
-collapse=false
-show_search=true
