--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -1,44 +1,17 @@
 list=[{
-"base": &"CharacterBody3D",
-"class": &"BasicEnemy",
+"base": &"Resource",
+"class": &"Weapon",
 "icon": "",
 "is_abstract": false,
 "is_tool": false,
 "language": &"GDScript",
-<<<<<<< HEAD
 "path": "res://src/weapons/weapon.gd"
 }, {
 "base": &"RefCounted",
 "class": &"WeaponClass",
-=======
-"path": "res://res/scenes/prefabs/BasicEnemy.gd"
-}, {
-"base": &"State",
-"class": &"EnemyFollow",
->>>>>>> LuisGandora-main
 "icon": "",
 "is_abstract": false,
 "is_tool": false,
 "language": &"GDScript",
-<<<<<<< HEAD
 "path": "res://src/weapon/weapon_class.gd"
-=======
-"path": "res://res/scenes/prefabs/enemyFollow.gd"
-}, {
-"base": &"State",
-"class": &"EnemyIdle",
-"icon": "",
-"is_abstract": false,
-"is_tool": false,
-"language": &"GDScript",
-"path": "res://res/scenes/prefabs/enemyIdle.gd"
-}, {
-"base": &"Node",
-"class": &"State",
-"icon": "",
-"is_abstract": false,
-"is_tool": false,
-"language": &"GDScript",
-"path": "res://res/scenes/prefabs/state.gd"
->>>>>>> LuisGandora-main
 }]
